--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,15 @@ header {
     margin-top: 70px;
     letter-spacing: 5px;
     list-style-type: none;
+    cursor: pointer;
+    transition: all 1s ease;
 }
 
-@media(max-width: 850px) {
+.info>ul>li:hover {
+    color: rgb(75, 71, 71);
+}
+
+@media(max-width: 1000px) {
     main {
         flex-direction: column;
     }
