--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,14 @@ header {
     letter-spacing: 5px;
     list-style-type: none;
     cursor: pointer;
-    transition: all 1s ease;
+    transition: all ease 1s;
 }
 
 .info>ul>li:hover {
-    color: rgb(75, 71, 71);
+    color: rgb(64, 62, 62);
 }
 
-@media(max-width: 1000px) {
+@media(max-width: 850px) {
     main {
         flex-direction: column;
     }
