finalizando a section sobre

--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,22 +1,17 @@
 .container-sobre {
-    width: 600px;
+    width: auto;
     margin: auto;
-    justify-content: justify;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    border: 1px solid black;
-    padding: 80px;
+    border: 2px solid black;
+    padding: 70px;
 }
 
 .container-sobre>h1 {
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-size: clamp(1.5rem, 1rem + 1.5vw, 2.5rem);
 }
 
 .container-sobre>p {
+    text-align: center;
     font-size: clamp(1rem, 0.8rem + 1.3vw, 1.3rem);
 }
