--- a/css/personalizaButton.css
+++ b/css/personalizaButton.css
@@ -19,7 +19,7 @@
     text-align: center;
     color: var(--color-black-1);
     transition: var(--speed-normal);
-    border: 1px solid var(--color-red);
+    border: 1px solid var(--color-black-2);
     background-color: var(--color-white);
     margin-left: 20px;
     margin-top: 20px;
@@ -29,10 +29,6 @@
     background-color: var(--color-black-1);
     color: var(--color-white);
     animation: animate var(--speed-fast) steps(8) forwards;
-}
-
-.btn-profile:last-of-type {
-    border: 1px solid var(--color-purple);
 }
 
 .btns {
